# velikey-python-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python.yml  release.yml
examples/: quick_start.py
src/velikey/: __init__.py  client.py  exceptions.py  models.py
src/velikey/resources/: __init__.py  agents.py  billing.py  compliance.py  diagnostics.py  monitoring.py  policies.py  rollouts.py  telemetry.py
tests/: conftest.py  test_client.py  test_integration.py  test_request_contract.py
velikey_hours_guardrails/: README.md
velikey_hours_guardrails/.githooks/: commit-msg
velikey_hours_guardrails/scripts/: validate_hours.py  velikey_hours_config.json
